# DogeNotes

./: README.md  main.py  pyproject.toml  requirements.txt  routes.py  schema.graphql
controllers/: createTask.py  deleteTask.py  editTask.py  getTask.py  getTasks.py  login.py  register.py
database_controllers/: loader.py
libs/: registerAuth.py
resolvers/: mutations.py  queries.py
